--- a/courses/vybecoding_101_with_v0/index.mdx
+++ b/courses/vybecoding_101_with_v0/index.mdx
@@ -6,6 +6,17 @@ banner: >-
   https://vvlp2wl4yesgvvvr.public.blob.vercel-storage.com/course/banner/ecffed33-5bac-46d4-b35e-ddd394ac6f07.webp
 ---
 
+<AiVideo
+prompt="Hey there, future vybe coder! Welcome to VybeCoding 101 with v0. In just 20 minutes, you're going to go from zero coding experience to having your very own live website that you can share with friends. No joke. We'll use v0 to generate a slick landing page, deploy it to Vercel so the whole world can see it, and then flex your creation on HackLab. Whether you want to build a portfolio, a project page, or something totally crazy - you've got this. Let's ship something awesome together! We are going to be building Homebrew Hackers Club landing page and you can follow along but you can come up with something crazy and build any webstie you want. Go to our AI tutor and brag what do you want to build."
+/>
+
+
+<Woz 
+title="Tell woz what do you want to build" 
+description="Think for a while and tell woz what do you want to build during this course." 
+placeholder="Type your idea here..." />
+
+
 ## Who this course is for
 
 This course is designed for total beginners who have never built a webpage before and want to ship something in under 20 minutes. 
@@ -39,8 +50,3 @@ This course is 1 module you should complete in around `20 min`
 ## Pro tips 
 In this course we are going to be building a landing page our company Homebrew Hackers Club which is Definitly not a cult, but you can build whatever webstie you want.   
 
-
-<Woz 
-title="Tell woz what do you want to build" 
-description="Think for a while and tell woz what do you want to build during this course." 
-placeholder="Type your idea here..." />
