--- a/courses/vybecoding_101_with_v0/module-1/04-build.mdx
+++ b/courses/vybecoding_101_with_v0/module-1/04-build.mdx
@@ -1,6 +1,18 @@
 ---
-title: "Build: generate + edit the landing page in v0"
+title: "Build"
 ---
+
+<AiVideo
+prompt="Alright, theory time is over. Let's actually build something. In this chapter, you're going to create a full landing page from scratch using v0. We're building a fake wellness retreat called 'Definitely-Not-A-Cult Retreat' — playful, slightly mysterious, and absolutely not suspicious at all. You'll learn the real workflow: set a brief, generate a first draft, then iterate section by section until it looks amazing. Hero section, agenda, testimonials, FAQ, footer — the whole thing. The secret sauce? The prompting loop. Describe what you want, generate it, review it, refine it, repeat. That's how the pros do it. We'll also cover style consistency, mobile responsiveness, and accessibility basics. By the end, you'll have a complete, polished landing page ready to deploy. Let's get building!"
+/>
+
+<Woz 
+title="Ready to Build?" 
+description="Before we start, think about what you want to create." 
+placeholder="Describe the landing page you want to build..." />
+
+
+
 
 # Build: generate + edit the landing page in v0
 
@@ -259,47 +271,19 @@ Use v0's preview to check different screen sizes:
 3. Make sure nothing is cut off or overlapping
 4. Text should be readable without zooming
 
-## Accessibility basics
-
-A few quick wins for accessibility:
-
-- **Contrast**: Text should be easily readable against backgrounds
-- **Alt text**: Images should have descriptions (v0 often adds these)
-- **Button text**: CTAs should say what they do ("Reserve Your Spot" not just "Click Here")
-
-Prompt if needed:
-
-> Ensure all images have alt text descriptions and the color contrast is accessible.
 
 ## Review your landing page
 
 Before moving to deployment, check:
 
-- [ ] **Hero**: Headline, subheadline, CTA ✓
-- [ ] **Agenda**: 4-5 activities with descriptions ✓
-- [ ] **Testimonials**: 3-4 quotes with attribution ✓
-- [ ] **FAQ**: 3-4 questions with answers ✓
-- [ ] **Footer**: Final CTA, contact info ✓
-- [ ] **Consistent style**: Colors, fonts, spacing ✓
-- [ ] **Mobile-friendly**: Looks good on small screens ✓
+- **Hero**: Headline, subheadline, CTA 
+- **Agenda**: 4-5 activities with descriptions 
+- **Testimonials**: 3-4 quotes with attribution 
+- **FAQ**: 3-4 questions with answers 
+- **Footer**: Final CTA, contact info 
+- **Consistent style**: Colors, fonts, spacing 
+- **Mobile-friendly**: Looks good on small screens 
 
 If something's missing, iterate! Use the prompting loop until you're happy.
 
-## Recap
-
-You've now built a complete landing page in v0:
-
-- Set a **clear brief** before starting
-- Generated a **first draft** with one prompt
-- Used the **prompting loop** to iterate
-- Polished each **section** individually
-- Ensured **style consistency** and **mobile responsiveness**
-
-Your "Definitely-Not-A-Cult Retreat" is ready for the world. Next: we ship it! 🚀
-
-<Woz 
-  title="Build session recap" 
-  description="Check your understanding of the v0 build process" 
-  prompt="Ask me 4-5 questions to verify I understand how to set a brief, use the prompting loop, edit sections, and check for mobile responsiveness in v0." 
-/>
 
