--- a/courses/vybecoding_101_with_v0/module-1/05-ship.mdx
+++ b/courses/vybecoding_101_with_v0/module-1/05-ship.mdx
@@ -1,6 +1,18 @@
 ---
-title: "Ship: deploy to Vercel + post on HackLab"
+title: "Ship"
 ---
+
+<AiVideo
+prompt="You built it. Now let's ship it. This is the moment where your landing page goes from 'cool thing on my screen' to 'real website anyone can visit'. We're deploying to Vercel — one click and your site gets a live URL you can share with literally anyone on the planet. Then we're posting it on HackLab so your classmates can see what you made. This is the finish line! Pre-deploy checks, hit that deploy button, verify it works, share it with the world. !"
+/>
+
+<Woz 
+title="Ready to Ship?" 
+description="Before we deploy, make sure you're ready." 
+placeholder="Paste your v0" />
+
+
+
 
 # Ship: deploy to Vercel + post on HackLab
 
@@ -241,9 +253,4 @@ Now that you know the basics, you can:
 
 You now have a repeatable process for building and shipping web projects. Use it! 🚀
 
-<Woz 
-  title="Ship and post recap" 
-  description="Check your understanding of deployment and sharing" 
-  prompt="Ask me 3-4 questions to verify I understand the pre-deploy checks, how to deploy to Vercel, and what to include in a HackLab post." 
-/>
 
