--- a/courses/vybecoding_101_with_v0/module-1/01-vybecoding.mdx
+++ b/courses/vybecoding_101_with_v0/module-1/01-vybecoding.mdx
@@ -4,12 +4,13 @@ title: "Vybecoding"
 
 <AiVideo
 prompt="Hey! So you want to build websites and apps but the thought of learning to code makes you want to cry into your keyboard? Same. For years, building software meant months of studying HTML, CSS, JavaScript — setting up weird development environments, debugging error messages that look like ancient curses, and eventually rage-quitting at 2am because of a missing semicolon. Fun times. But here's the plot twist: VybeCoding changes everything. Instead of YOU learning to speak computer, you teach the AI to understand YOU. Your idea, described in plain English, becomes a real live website. No syntax memorization. No semicolon hunting. Just vibes. The mindset is simple: start with what you want users to experience, describe it like you're texting a friend, iterate fast, and ship it. And yes — the code AI generates is legit. Same HTML, CSS, JavaScript the pros write. You just didn't have to suffer through writing it yourself. Think of it like driving a car without becoming a mechanic first. So... what do YOU want to build?"
+id="3425e6c8d3f685287f2ab33ecc75d76f6f22bfbe94525aaaf154fe34aee43036"
 />
 
 <Woz 
-title="What do you want to build?" 
-description="Think for a moment — what's one thing you wish existed on the internet? A tool? A portfolio? A fun project? Share your idea with Woz." 
-placeholder="Explain what vybecoding is..." />
+title="What is VybeCoding?" 
+description="In your own words, explain what VybeCoding means." 
+placeholder="Explain here what vybecoding is..." />
 
 
 
