--- a/courses/vybecoding_101_with_v0/module-1/05-ship.mdx
+++ b/courses/vybecoding_101_with_v0/module-1/05-ship.mdx
@@ -4,12 +4,14 @@ title: "Ship"
 
 <AiVideo
 prompt="You built it. Now let's ship it. This is the moment where your landing page goes from 'cool thing on my screen' to 'real website anyone can visit'. We're deploying to Vercel — one click and your site gets a live URL you can share with literally anyone on the planet. Then we're posting it on HackLab so your classmates can see what you made. This is the finish line! Pre-deploy checks, hit that deploy button, verify it works, share it with the world. !"
+id="82b24165e302531752ebf6eba302014e9f7e5c701f789b7263411167643853c2"
+
 />
 
 <Woz 
 title="Ready to Ship?" 
 description="Before we deploy, make sure you're ready." 
-placeholder="Paste your v0" />
+placeholder="Paste your deployed app url here..." />
 
 
 
